# Norsk-Morgenbot-

./: .env.example  .gitignore  README.md  morgenbot.py  pyproject.toml  requirements.txt
.github/workflows/: morgenbot.yml
data/: cities.json  fun_facts.json  holidays.json  jokes.json  name_days.json  proverbs.json  quotes.json  weather_symbols.json
src/morgenbot/: __init__.py  __main__.py  app.py
src/morgenbot/builders/: __init__.py  message_builder.py
src/morgenbot/builders/field_builders/: __init__.py
src/morgenbot/config/: __init__.py  constants.py  settings.py
src/morgenbot/data/: __init__.py  loader.py
src/morgenbot/exceptions/: __init__.py  errors.py
src/morgenbot/models/: __init__.py  calendar.py  discord.py  finance.py  news.py  weather.py
src/morgenbot/services/: __init__.py  ai_service.py  base.py  crypto_service.py  discord_service.py  electricity_service.py  finance_service.py  news_service.py  sun_service.py  weather_service.py
src/morgenbot/utils/: __init__.py  calculations.py  date_utils.py  formatting.py
